[gd_scene load_steps=4 format=3 uid="uid://c5kv3whgb582m"]

[ext_resource type="Script" uid="uid://xmy3p6neaf0t" path="res://test_bar.gd" id="1_6k7k7"]
[ext_resource type="PackedScene" uid="uid://umsrccqr4yaa" path="res://Scenes/managers/health_bar/custom_health_bar.tscn" id="2_g2rpo"]
[ext_resource type="Texture2D" uid="uid://dfq264joewmbi" path="res://Graphics/temporary_art/white_square.aseprite" id="3_g2rpo"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6k7k7")

[node name="burn_up" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 161.0
offset_right = 98.0
offset_bottom = 222.0
text = "+1"

[node name="burn_down" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 253.0
offset_right = 98.0
offset_bottom = 314.0
text = "-1"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 223.0
offset_right = 111.0
offset_bottom = 252.0
text = "Burn"

[node name="ba" type="Label" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 307.0
offset_right = 114.0
offset_bottom = 336.0
text = "Burn"

[node name="poison_up" type="Button" parent="."]
layout_mode = 0
offset_left = 136.0
offset_top = 161.0
offset_right = 184.0
offset_bottom = 222.0
text = "+1"

[node name="poison_down" type="Button" parent="."]
layout_mode = 0
offset_left = 136.0
offset_top = 253.0
offset_right = 184.0
offset_bottom = 314.0
text = "-1"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 223.0
offset_right = 197.0
offset_bottom = 252.0
text = "poison"

[node name="pa" type="Label" parent="."]
layout_mode = 0
offset_left = 127.0
offset_top = 311.0
offset_right = 228.0
offset_bottom = 340.0
text = "poison"

[node name="rejuv_up" type="Button" parent="."]
layout_mode = 0
offset_left = 274.0
offset_top = 161.0
offset_right = 322.0
offset_bottom = 222.0
text = "+1"

[node name="rejuv_down" type="Button" parent="."]
layout_mode = 0
offset_left = 274.0
offset_top = 253.0
offset_right = 322.0
offset_bottom = 314.0
text = "-1"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 268.0
offset_top = 223.0
offset_right = 335.0
offset_bottom = 252.0
text = "rejuv"

[node name="ra" type="Label" parent="."]
layout_mode = 0
offset_left = 261.0
offset_top = 309.0
offset_right = 345.0
offset_bottom = 338.0
text = "rejuv"

[node name="shield_up" type="Button" parent="."]
layout_mode = 0
offset_left = 392.0
offset_top = 162.0
offset_right = 440.0
offset_bottom = 223.0
text = "+1"

[node name="shield_down" type="Button" parent="."]
layout_mode = 0
offset_left = 385.0
offset_top = 253.0
offset_right = 433.0
offset_bottom = 314.0
text = "-1"

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 369.0
offset_top = 224.0
offset_right = 470.0
offset_bottom = 253.0
text = "shield"

[node name="sa" type="Label" parent="."]
layout_mode = 0
offset_left = 371.0
offset_top = 309.0
offset_right = 472.0
offset_bottom = 338.0
text = "shield"

[node name="freeze_up" type="Button" parent="."]
layout_mode = 0
offset_left = 533.0
offset_top = 166.0
offset_right = 581.0
offset_bottom = 227.0
text = "+1"

[node name="freeze_down" type="Button" parent="."]
layout_mode = 0
offset_left = 544.0
offset_top = 250.0
offset_right = 592.0
offset_bottom = 311.0
text = "-1"

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 511.0
offset_top = 226.0
offset_right = 612.0
offset_bottom = 255.0
text = "freeze"

[node name="fa" type="Label" parent="."]
layout_mode = 0
offset_left = 508.0
offset_top = 308.0
offset_right = 609.0
offset_bottom = 337.0
text = "freeze"

[node name="health_up" type="Button" parent="."]
layout_mode = 0
offset_left = 668.0
offset_top = 172.0
offset_right = 716.0
offset_bottom = 233.0
text = "+1"

[node name="health_down" type="Button" parent="."]
layout_mode = 0
offset_left = 679.0
offset_top = 256.0
offset_right = 727.0
offset_bottom = 317.0
text = "-1"

[node name="Label6" type="Label" parent="."]
layout_mode = 0
offset_left = 646.0
offset_top = 232.0
offset_right = 747.0
offset_bottom = 261.0
text = "health"

[node name="ha" type="Label" parent="."]
layout_mode = 0
offset_left = 643.0
offset_top = 314.0
offset_right = 744.0
offset_bottom = 343.0
text = "freeze"

[node name="health_bar" parent="." instance=ExtResource("2_g2rpo")]
custom_minimum_size = Vector2(359, 0)
layout_mode = 1
offset_left = 180.0
offset_top = 73.0
offset_right = -1381.0
offset_bottom = -957.0

[node name="freeze" type="Control" parent="."]
anchors_preset = 0
offset_left = -56.0
offset_right = -16.0
offset_bottom = 40.0

[node name="freeze_top" type="TextureRect" parent="freeze"]
modulate = Color(0, 1, 1, 1)
layout_mode = 0
offset_left = 161.0
offset_top = 61.0
offset_right = 559.0
offset_bottom = 73.0
texture = ExtResource("3_g2rpo")

[node name="freeze_bottom" type="TextureRect" parent="freeze"]
modulate = Color(0, 1, 1, 1)
layout_mode = 0
offset_left = 164.0
offset_top = 124.0
offset_right = 562.0
offset_bottom = 136.0
texture = ExtResource("3_g2rpo")

[connection signal="pressed" from="burn_up" to="." method="_on_burn_up_pressed"]
[connection signal="pressed" from="burn_down" to="." method="_on_burn_down_pressed"]
[connection signal="pressed" from="poison_up" to="." method="_on_poison_up_pressed"]
[connection signal="pressed" from="poison_down" to="." method="_on_poison_down_pressed"]
[connection signal="pressed" from="rejuv_up" to="." method="_on_rejuv_up_pressed"]
[connection signal="pressed" from="rejuv_down" to="." method="_on_rejuv_down_pressed"]
[connection signal="pressed" from="shield_up" to="." method="_on_shield_up_pressed"]
[connection signal="pressed" from="shield_down" to="." method="_on_shield_down_pressed"]
[connection signal="pressed" from="freeze_up" to="." method="_on_freeze_up_pressed"]
[connection signal="pressed" from="freeze_down" to="." method="_on_freeze_down_pressed"]
[connection signal="pressed" from="health_up" to="." method="_on_health_up_pressed"]
[connection signal="pressed" from="health_down" to="." method="_on_health_down_pressed"]
